# sibi

./: .gitignore  README.md  app.py  pyproject.toml
docs/source/: conf.py  index.rst  solid.rst
sibi/: __init__.py  applications.py  decorators.py  exceptions.py  ib_factory.py  ib_protocol.py  main.py  models.py  settings.py  xmlrpc_server.py
sibi/ibapi/: client.py  comm.py  commission_report.py  common.py  connection.py  contract.py  decoder.py  execution.py  order.py  order_condition.py  order_state.py  orderdecoder.py  reader.py  scanner.py  softdollartier.py  tag_value.py  ticktype.py  utils.py  wrapper.py
