[tool.poetry]
name = "sibi"
version = "0.1.0"
description = "Synchronous Interactiver Brokers Interface"
authors = ["Manuel Fedele <manuelfedele@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Twisted = "^20.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
